# blank-sdl-emscripten

./: .gitignore  CMakeLists.txt  Makefile  Makefile.DOS  Makefile.SDL  Makefile.bax  Makefile.cd32  Makefile.cppunit  Makefile.em  Makefile.emsdk  Makefile.webos  README.md  TODO  base.pfs  game  game.cbp  game.data  game.html  game.js  game.wasm  main.cpp
NDK-version/: build.gradle  settings.gradle
NDK-version/app/: build.gradle
NDK-version/app/src/main/: AndroidManifest.xml
NDK-version/app/src/main/assets/: base.pfs
NDK-version/app/src/main/cpp/: CMakeLists.txt  native-lib.c  native-lib.cpp
NDK-version/gradle/wrapper/: gradle-wrapper.properties
SDLVersion/: CSDLRenderer.cpp  main.cpp
SoundSystem/: SoundSystem.h
VC6/: StdAfx.cpp  The Mistral Report 95.aps  The Mistral Report 95.dep  The Mistral Report 95.dsp  The Mistral Report 95.dsw  The Mistral Report 95.h  The Mistral Report 95.mak  The Mistral Report 95.ncb  The Mistral Report 95.opt  The Mistral Report 95.plg  The Mistral Report 95.rc  resource.h
Xcode2/: Blank-info.plist  GameView.m  OSXRenderer.m  main.m
Xcode2/Blank.xcodeproj/: project.pbxproj
Xcode2/Blank.xcodeproj/project.xcworkspace/xcuserdata/monty.xcuserdatad/: UserInterfaceState.xcuserstate
base3d/include/: CRenderer.h  Common.h  Enums.h  FixP.h  Globals.h  LoadBitmap.h
base3d/src/: CPackedFileReader.c  CPackedFileReader.cpp  CRenderer.c  CRenderer.cpp  CRenderer_Rasterization.c  CRenderer_Rasterization.cpp  CRenderer_Tesselation.c  FixP.c  Globals.c  Globals.cpp  LoadBitmap.c  LoadBitmap.cpp
base3d/src/AmigaVersion/: AmigaRenderer.c
base3d/src/DOSVersion/: DOSRenderer.c
base3d/src/SDLVersion/: CSDL2Renderer.c  CSDL2Renderer.cpp  SDL1Renderer.c
data/: compile_map.py
data/assets/: backdrop.img  map1.txt  player.img
data/src/: tiles1.prp  tiles5.prp
include/: CGame.h  CGameSnapshot.cpp  CGameSnapshot.h  CRenderer.h  Common.h
menu/include/: Engine.h
menu/src/: CreditsScreen.c  CreditsScreen.cpp  Engine.c  Engine.cpp  HelpScreen.c  HelpScreen.cpp  Interrogation.c  Interrogation.cpp  Main.c  Main.cpp  MainMenu.c  MainMenu.cpp  UI.c  UI.cpp
src/: CGame.cpp  CGameSnapshot.cpp
tests/: TestTrivial.cpp
(+6 files in other folders)
